@@ -25,7 +25,38 @@ AC_TYPE_SIGNAL
 AC_TYPE_SIZE_T
 AC_TYPE_UID_T
 
-PKG_CHECK_MODULES(USER_SHARE, glib-2.0 >= 2.2.0 howl >= 0.9.6 gconf-2.0)
+AM_CONDITIONAL(HAVE_AVAHI, false)
+AM_CONDITIONAL(HAVE_HOWL, false)
+			  
+AC_ARG_ENABLE(avahi, [  --disable-avahi     build without avahi support])
+msg_avahi=no
+if test "x$enable_avahi" != "xno"; then
+	PKG_CHECK_MODULES(AVAHI, avahi-glib avahi-client,
+		  	[AM_CONDITIONAL(HAVE_AVAHI, true)
+		   	AC_DEFINE(HAVE_AVAHI, [], [Set if we can use avahi])]
+                        msg_avahi=yes,
+	          	[AM_CONDITIONAL(HAVE_AVAHI, false)])
+	AC_SUBST(AVAHI_CFLAGS)
+	AC_SUBST(AVAHI_LIBS)
+fi
+			  
+AC_ARG_ENABLE(howl, [  --disable-howl     build without howl support])
+msg_howl=no
+if test "x$msg_avahi" = "xno" -a "x$enable_howl" != "xno"; then
+	PKG_CHECK_MODULES(HOWL, howl >= 0.9.6,
+		  	[AM_CONDITIONAL(HAVE_HOWL, true)
+		   	AC_DEFINE(HAVE_HOWL, [], [Set if we can use howl])]
+                        msg_howl=yes,
+	          	[AM_CONDITIONAL(HAVE_HOWL, false)])
+	AC_SUBST(HOWL_CFLAGS)
+	AC_SUBST(HOWL_LIBS)
+fi
+
+if test "x$msg_avahi" = "xno" -a "x$msg_howl" = "xno"; then
+  AC_MSG_ERROR([Neither avahi nor howl detected. Gnome-user-share needs a mDNS implementation.])
+fi
+
+PKG_CHECK_MODULES(USER_SHARE, glib-2.0 >= 2.2.0 gconf-2.0)
 AC_SUBST(USER_SHARE_CFLAGS)
 AC_SUBST(USER_SHARE_LIBS)
 
